--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://geanderson-062.github.io/Todo-list",
+  "homepage": "https://geanderson-062.github.io/Todo_list",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
