--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
+    "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
@@ -17,7 +19,8 @@
     "react-scripts": "5.0.1",
     "scrollreveal": "^4.0.9",
     "sweetalert2": "^11.7.27",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
